--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   flutter_staggered_grid_view: ^0.7.0
   dropdown_search: ^5.0.3
   intl: ^0.18.1
+  url_launcher: 6.1.7
 
 dev_dependencies:
   flutter_test:
